--- a/DemoBlazorCRUD/DemoBlazorCRUD/appsettings.json
+++ b/DemoBlazorCRUD/DemoBlazorCRUD/appsettings.json
@@ -6,8 +6,10 @@
     "Logging": {
         "LogLevel": {
             "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        },
+        "DetailedErrors": true // 新增或設置詳細錯誤訊息
     },
     "AllowedHosts": "*"
 }
